[package]
name = "itp-attestation-handler"
version = "0.8.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"

[dependencies]
codec  = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
arrayvec = { version = "0.7.1", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = { version = "0.4", default-features = false }
thiserror = { version = "1.0", optional = true }
serde_json = { version = "1.0", default-features = false, optional = true }
yasna = { version = "0.4", optional = true, features = ["bit-vec", "num-bigint", "chrono", "std"] }

base64 = { version = "0.13", default-features = false, features = ["alloc"], optional = true }
chrono = { version = "0.4.19", default-features = false, features = ["alloc"], optional = true }
rustls = { version = "0.19", optional = true }
webpki = { version = "0.21", optional = true }

# mesalock
rustls_sgx = { package = "rustls", rev = "sgx_1.1.3", features = ["dangerous_configuration"], git = "https://github.com/mesalock-linux/rustls", optional = true }
serde_json_sgx = { package = "serde_json", tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/serde-json-sgx", optional = true  }
thiserror_sgx = { package = "thiserror", git = "https://github.com/mesalock-linux/thiserror-sgx", tag = "sgx_1.1.3", optional = true }
webpki_sgx = { package = "webpki", git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx", optional = true }
webpki-roots = { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
yasna_sgx = { package = "yasna", optional = true, default-features = false, features = ["bit-vec", "num-bigint", "chrono", "mesalock_sgx"], git = "https://github.com/mesalock-linux/yasna.rs-sgx", rev = "sgx_1.1.3" }

# for attestation
chrono_sgx = { package = "chrono", git = "https://github.com/mesalock-linux/chrono-sgx", optional = true}
base64_sgx = { package = "base64", rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/rust-base64-sgx", optional = true }
num-bigint = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
httparse = { default-features = false, features = ["mesalock_sgx"], git = "https://github.com/integritee-network/httparse-sgx", branch = "sgx-experimental" }
itertools = { version = "0.10.1",  default-features = false, features = []}
bit-vec = { version = "0.6",    default-features = false }

# sgx
sgx_tse = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true  }
sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs","net","backtrace"], optional = true  }
sgx_rand = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true  }
sgx_types = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true  }

# scs / integritee
itp-utils = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "master" }
substrate-api-client = { default-features = false, git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.27" }

# local deps
itp-node-api = { path = "../node-api", default-features = false }
itp-ocall-api = { path = "../ocall-api", default-features = false }
itp-settings = { path = "../settings" }
itp-sgx-externalities = { path = "../substrate-sgx/externalities", default-features = false }
itp-sgx-io = { path = "../sgx/io", default-features = false }
itp-sgx-crypto = { path = "../sgx/crypto", default-features = false }

# substrate deps
sp-core = { default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }

[features]
default = ["std"]
std = [
    "base64",
    "chrono",
    "rustls",
    "serde_json",
    "thiserror",
    "webpki",
    "yasna",
    "itp-node-api/std",
    "itp-sgx-externalities/std",
    "itp-sgx-io/std",
    "itp-sgx-crypto/std",
    "itp-utils/std"]

sgx = [
    "base64_sgx",
    "chrono_sgx",
    "rustls_sgx",
    "serde_json_sgx",
    "thiserror_sgx",
    "webpki_sgx",
    "yasna_sgx",
    "sgx_tse",
    "sgx_tstd",
    "sgx_rand",
    "sgx_tcrypto",
    "itp-node-api/sgx",
    "itp-sgx-externalities/sgx",
    "itp-sgx-io/sgx",
    "itp-sgx-crypto/sgx",
    "itp-utils/sgx"]
test = []
