[package]
name = "itp-enclave-api"
version = "0.9.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"

[dependencies]
thiserror = "1.0.25"
log = "0.4"
serde_json = "1.0"
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }

sgx_types = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_crypto_helper = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

itc-parentchain-light-client = { path = "../../core/parentchain/light-client" }
itp-enclave-api-ffi = { path = "ffi" }
itp-settings = { path = "../settings" }
itp-types = { path = "../types" }


[dev-dependencies]
mockall = "0.11"
