[package]
name = "itp-enclave-api"
version = "0.9.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
hex = "0.4"
log = "0.4"
serde_json = "1.0"
thiserror = "1.0.25"

sgx_crypto_helper = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }

teerex-primitives = { git = "https://github.com/integritee-network/pallets.git", branch = "polkadot-v0.9.39" }

itc-parentchain = { path = "../../core/parentchain/parentchain-crate" }
itp-enclave-api-ffi = { path = "ffi" }
itp-settings = { path = "../settings" }
itp-storage = { path = "../storage" }
itp-types = { path = "../types" }
