[package]
name = "itp-enclave-metrics"
version = "0.8.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sgx
sgx_types = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

# no-std dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }

# internal
itp-types = { default-features = false, git = "https://github.com/integritee-network/pallets.git", branch = "master" }

[features]
default = ["std"]
std = [
    "itp-types/std",
    "codec/std",
]
sgx = [
    "sgx_tstd",
]
