[package]
name = "itp-extrinsics-factory"
version = "0.9.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"

[dependencies]
# sgx dependencies
sgx_types = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
substrate-api-client = { default-features = false, git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.28" }

# local dependencies
itp-node-api = { path = "../node-api", default-features = false }
itp-nonce-cache = { path = "../nonce-cache", default-features = false }
itp-types = { path = "../types", default-features = false }

# sgx enabled external libraries
thiserror_sgx = { package = "thiserror", git = "https://github.com/mesalock-linux/thiserror-sgx", tag = "sgx_1.1.3", optional = true }

# std compatible external libraries (make sure these versions match with the sgx-enabled ones above)
thiserror = { version = "1.0", optional = true }

# no-std dependencies
log = { version = "0.4", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sp-core = { default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

[features]
default = ["std"]
std = [
    "itp-node-api/std",
    "itp-nonce-cache/std",
    "itp-types/std",
    "log/std",
    "substrate-api-client/std",
    "thiserror",
]
sgx = [
    "itp-node-api/sgx",
    "itp-nonce-cache/sgx",
    "sgx_tstd",
    "thiserror_sgx",
]
mocks = []
