[package]
name = "itp-import-queue"
version = "0.8.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"

[dependencies]
# sgx dependencies
sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_types = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

# sgx enabled external libraries
thiserror_sgx = { package = "thiserror", git = "https://github.com/mesalock-linux/thiserror-sgx", tag = "sgx_1.1.3", optional = true }

# crates.io std-only compatible external libraries (make sure these versions match with the sgx-enabled ones above)
thiserror = { version = "1.0", optional = true }

# crates.io no-std compatible libraries

[features]
default = ["std"]
std = [
    # no-std compatible libraries
    # std compatible external libraries
    "thiserror",
]
sgx = [
    # sgx
    "sgx_tstd",
    # sgx enabled external libraries
    "thiserror_sgx",
]
